flapivor/tests/m1/hopix/parser/bad/30-string-literal-4.hopix
val s = "This one is a \"Nightmare\"! \0x4Z \\ \r \0x2e ' \032 \0o123 \0b01011010"